# marketmaker.c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindOpenSSL.cmake
include/basilisk/: basilisk.h
include/compat/: OS_portable.h  mman.h  usleep.h
include/crypto777/: cJSON.h  curve25519.h
include/exchanges/: exchanges777.h
include/gecko/: gecko.h
include/iguana/: iguana_defines.h  iguana_structs.h  iguana_utils.h
include/jpeg/: jmemsys.h
sources/: marketmaket_sources.txt
sources/compat/: OS.c  OS_nonportable.c  OS_portable.c  OS_time.c  bitcoind_RPC.c  inet.c  usleep.c
sources/crypto777/: SaM.c  cJSON.c  curve25519-donna.c  curve25519.c  hmac_sha512.c  ramcoder.c  scrypt.c  tweetnacl.c
sources/datachain/: datachain.c
sources/deprecated/: libgfshare.c
sources/exchanges/: CMakeLists.txt  LP_etomic.c  LP_nativeDEX.c  LP_ordermatch.c  LP_privkey.c  LP_rpc.c  LP_scan.c  LP_secp.c  LP_socket.c  LP_transaction.c  LP_utxo.c
sources/gecko/: gecko.c
sources/iguana/: iguana777.c  iguana_accept.c  iguana_bitmap.c  iguana_blocks.c  iguana_bundles.c  iguana_chains.c  iguana_exchanges.c  iguana_init.c  iguana_interpreter.c  iguana_json.c  iguana_mofn.c  iguana_msg.c  iguana_notary.c  iguana_passport.c  iguana_payments.c  iguana_peers.c  iguana_ramchain.c  iguana_realtime.c  iguana_recv.c  iguana_rpc.c  iguana_scripts.c  iguana_secp.c  iguana_serdes.c  iguana_sign.c  iguana_spendvectors.c  iguana_stake.c  iguana_tradebots.c  iguana_tx.c  iguana_txidfind.c  iguana_unspents.c  iguana_utils.c  iguana_volatiles.c  iguana_wallet.c
sources/jpeg/: jchuff.c  jconfig.h
(+22 files in other folders)
